[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "json",
    "migrate",
] }

anyhow = "1.0"
base64 = "0.22.0"
crypto-hash = "0.3.4"
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13.2"
chrono = { version = "0.4", features = ["serde"] }


axum = { version = "0.7", features = ["macros", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }


uuid = { version = "1.8", features = ["serde", "v4"] }
